AC_PREREQ(2.53)
AC_INIT(liblouisxml, 1.3.23)
AC_CONFIG_SRCDIR(liblouisxml.pc.in)

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

AM_MAINTAINER_MODE
AC_PROG_MAKE_SET

dnl libtool versioning for libwnck

dnl increment if the interface has additions, changes, removals.
LIBLOUISXML_CURRENT=1

dnl increment any time the source changes; set to
dnl  0 if you increment CURRENT
LIBLOUISXML_REVISION=0

dnl increment if any interfaces have been added; set to 0
dnl  if any interfaces have been changed or removed. removal has
dnl  precedence over adding, so set to 0 if both happened.
LIBLOUISXML_AGE=0

AC_SUBST(LIBLOUISXML_CURRENT)
AC_SUBST(LIBLOUISXML_REVISION)
AC_SUBST(LIBLOUISXML_AGE)

AC_PROG_CC
AC_ISC_POSIX
AC_HEADER_STDC
AC_LIBTOOL_WIN32_DLL
AM_PROG_LIBTOOL

AC_PATH_PROG(PKG_CONFIG, pkg-config)

AC_ARG_ENABLE(ucs4,
              AC_HELP_STRING(--enable-ucs4, Enable 4 byte-wide characters.),
              [],
              [enable_ucs4=no])

PKG_CHECK_MODULES(BASE_DEPENDENCIES, [liblouis, libxml-2.0])

AC_OUTPUT([
Makefile
doc/Makefile
lbx_files/Makefile
liblouisxml/Makefile
tools/Makefile
liblouisxml.pc
])
