lbx_filesdir = $(sysconfdir)/liblouisxml/lbx_files

lbx_files_DATA = \
	article.sem \
	book.sem \
	canonical.cfg \
	chapter.sem \
	compbook.cfg \
	cy-cy-g2.ctb \
	Cz-Cz-g1.utb \
	dansk.dis \
	dansk.utb \
	de-de.dis \
	default.cfg \
	document.sem \
	dtbook3.sem \
	embosser.cfg \
	en-us-comp8.ctb \
	en-us-compbrl.ctb \
	en-us-g1.ctb \
	en-us-g1.utb \
	file-list \
	greek-bible.cfg \
	gutbook.sem \
	html.sem \
	hyph_fr_FR.dic \
	hyph_it_IT.dic \
	hyph_nl_NL.dic \
	hyph_no_NO.dic \
	hyph_pl_PL.dic \
	hyph_pt_PT.dic \
	hyph_sv_SE.dic \
	it-it-g1.utb \
	Lv-Lv-g1.utb \
	math.cfg \
	math.sem \
	new_chardefs.cti \
	paperless.cfg \
	preface.sem \
	README \
	sample.sem \
	sem-copyright \
	set.sem \
	sorted.book.sem \
	sorted.ctb \
	spanish.cfg \
	tables.txt \
	test.cfg \
	testhyph.cfg \
	test.txt \
	ThML.sem \
	usedtd.cfg \
	wordDocument.sem \
	w_wordDocument.sem

EXTRA_DIST = \
	$(lbx_files_DATA)