lbx_filesdir = $(sysconfdir)/liblouisxml/lbx_files

lbx_files_DATA = \
	article.sem \
	book.sem \
	canonical.cfg \
	chapter.sem \
	default.cfg \
	document.sem \
	dtbook3.sem \
	gutbook.sem \
	html.sem \
	math.sem \
	preface.sem \
	sample.sem \
	set.sem \
	ThML.sem \
	wordDocument.sem \
	Workbook.sem \
	w_wordDocument.sem

EXTRA_DIST = \
	$(lbx_files_DATA)